# millstone

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  maintenance.yml  quality.yml  release.yml  security.yml
.millstone/: tasklist.md
docs/: getting-started.md  index.md  worktrees.md
docs/architecture/: ontology.md  provider-flow.md  scope.md
docs/cli-providers/: claude.md  codex.md  gemini.md  index.md  opencode.md
docs/maintainer/: code-of-conduct.md  contributing.md  maintainers.md  release_checklist.md  security.md
docs/maintainer/infrastructure/: manifest.md
docs/prompts/: design.md  execute.md  index.md
docs/providers/: confluence.md  github.md  index.md  jira.md  linear.md  mcp.md  notion.md
src/millstone/: __init__.py  config.py  orchestrate.py  utils.py
src/millstone/agent_providers/: __init__.py  base.py  implementations.py  registry.py
src/millstone/artifact_providers/: __init__.py  base.py  file.py  jira.py  mcp.py  protocols.py  registry.py
src/millstone/artifacts/: __init__.py  eval_manager.py  evidence_store.py  models.py  tasklist.py
src/millstone/commands/: init.py
src/millstone/loops/: __init__.py  engine.py  inner.py  outer.py  registry_adapter.py  validation.py
src/millstone/policy/: __init__.py  capability.py  effects.py  reference_integrity.py  schemas.py
src/millstone/prompts/: analyze_fix_prompt.md  analyze_prompt.md  analyze_review_prompt.md  commit_prompt.md  compact_tasklist.md  complexity_prompt.md  context_extraction_prompt.md  design_fix_prompt.md  design_prompt.md  plan_fix_prompt.md  plan_prompt.md  plan_review_prompt.md  review_prompt.md  (+12 more)
tests/: conftest.py  test_artifact_models.py  test_artifact_provider_registry.py  test_artifact_providers.py  test_capability_policy.py  test_cli_providers.py  test_complexity_analyzer.py  test_config.py  test_effect_gate_wire.py  test_effect_provider.py  test_evidence.py  test_file_artifact_providers.py  test_gemini_noise.py  test_gemini_provider.py  test_git_add_regression.py  test_init.py  test_integration.py  test_jira_provider.py  test_locks.py  test_loop_engine.py  test_loop_registry_adapter.py  test_loops_registry_roles.py  test_mcp_providers.py  test_merge_pipeline.py  test_no_code_flow.py  test_orchestrator.py  test_outer_loops.py  test_parallel.py  test_parallel_state.py  test_profile.py  test_prompt_placeholders.py  test_provider_conformance.py  test_reference_integrity.py  test_scheduler.py  test_tasklist.py  test_worktree.py
tests/e2e/: conftest.py  test_e2e_complete_flag.py  test_e2e_continue_outer_loop.py  test_e2e_file_lifecycle.py  test_e2e_inner_loop.py  test_e2e_mcp_lifecycle.py  test_e2e_mcp_staging.py  test_e2e_real_cli.py  test_e2e_real_mcp.py  test_e2e_real_mcp_linear.py  test_real_cli_markers.py  test_stub_cli_harness.py
tests/unit/: test_complete_flag.py  test_continue_outer_loop.py  test_git_helpers.py  test_json_guards.py  test_mcp_deferred_writes.py  test_pipeline.py  test_utils.py
(+23 files in other folders)
